--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batch Editor for Twitch Center's Quote API</title>
+    <link rel="icon" href="logo.png">
   </head>
   <body>
       <div id="root"></div>
