fix dark mode in prod, add tests

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batch Editor for Twitch Center's Quote API</title>
-    <link rel="icon" href="logo.png">
+    <script type="module">
+      import { initializeTheme } from './src/utils/themeInitializer.ts';
+      initializeTheme();
+    </script>
   </head>
   <body>
       <div id="root"></div>
